<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.newtonwilliamsdesign.potlatch.gift.client.CreateGiftActivity">

    <EditText
        android:id="@+id/giftTitleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:hint="@string/titleTextEditDefault"/>

    <EditText
        android:id="@+id/giftDescriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/giftTitleEditText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/giftTitleEditText"
        android:inputType="textMultiLine"
        android:hint="@string/descriptionTextEditDefault"/>


    <Button
        android:id="@+id/createGiftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createGiftButtonLabel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <ImageButton
        android:id="@+id/addFromGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gallery_icon"
        android:layout_below="@+id/giftDescriptionEditText"
        android:layout_alignParentStart="true"
        android:cropToPadding="false"
        android:padding="0dp"
        android:layout_margin="10dp"/>

    <ImageButton
    android:id="@+id/addFromCameraButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/camera_icon"
    android:layout_below="@+id/giftDescriptionEditText"
    android:layout_alignEnd="@+id/giftDescriptionEditText"
    android:padding="0dp"
    android:layout_margin="10dp"/>

    <it.gmariotti.cardslib.library.view.CardViewNative
        style="@style/card_external"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectedImage"
        android:layout_above="@+id/createGiftButton"
        android:layout_below="@+id/addFromGalleryButton"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        card:card_layout_resourceID="@layout/native_material_largeimage_card"/>

</RelativeLayout>
